--- a/application/templates/user.html
+++ b/application/templates/user.html
@@ -74,9 +74,13 @@
 
 <br><br><br><br>
 
+{% if projectCounter %}
+
 {% include "recent_Project.html" %}
 
 {% include "gallery.html" %}
+
+{% endif %}
 
 <section>
   <div class="container"><br><br><br><br><br><br></div>
